--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   path_provider: ^2.1.1
   permission_handler: ^12.0.1
   csv: ^6.0.0
+  share_plus: ^6.3.0
   signature: ^6.3.0
   shared_preferences: ^2.2.2
   file_picker: ^10.2.0
