--- a/.github/workflows/deploy_vercel.yml
+++ b/.github/workflows/deploy_vercel.yml
@@ -75,6 +75,17 @@ jobs:
 
           echo "Using commit author: $VERCEL_GIT_COMMIT_AUTHOR_NAME <$VERCEL_GIT_COMMIT_AUTHOR_EMAIL>"
 
+          # Configure git identity in the runner so tools that read git user information
+          # or the local git config see the expected author. This also sets the common
+          # GIT_* env vars so the Vercel deployment service receives the intended author
+          # metadata when it evaluates team access rules.
+          git config --global user.name "$VERCEL_GIT_COMMIT_AUTHOR_NAME" || true
+          git config --global user.email "$VERCEL_GIT_COMMIT_AUTHOR_EMAIL" || true
+          export GIT_AUTHOR_NAME="$VERCEL_GIT_COMMIT_AUTHOR_NAME"
+          export GIT_AUTHOR_EMAIL="$VERCEL_GIT_COMMIT_AUTHOR_EMAIL"
+          export GIT_COMMITTER_NAME="$VERCEL_GIT_COMMIT_AUTHOR_NAME"
+          export GIT_COMMITTER_EMAIL="$VERCEL_GIT_COMMIT_AUTHOR_EMAIL"
+
           # Install jq so we can parse JSON output safely when resolving slugs -> ids
           sudo apt-get update -y && sudo apt-get install -y jq || true
 
